--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -919,14 +919,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "id": "f6533d39",
       "metadata": {
-        "id": "f6533d39"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6533d39",
+        "outputId": "e981bdf2-26da-4327-9cf5-01d5fe6237a9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sin normalizar:\n",
+            "[[0.03538563 0.50635809 0.96534138 0.11094453 0.67211712]\n",
+            " [0.30819889 0.55580487 0.35431658 0.65368258 0.73936261]\n",
+            " [0.43231917 0.28722277 0.89083141 0.90674383 0.85514612]\n",
+            " [0.12800081 0.59465089 0.37139057 0.00292642 0.33701222]\n",
+            " [0.46956842 0.85007319 0.13481576 0.19666632 0.51691068]]\n",
+            "Normalizada:\n",
+            "[[-5.43920302  0.38756399  6.06600364 -4.50440503  2.438298  ]\n",
+            " [-2.06401781  0.99930857 -1.49345988  2.21023     3.27024434]\n",
+            " [-0.52842915 -2.32352965  5.14418272  5.3410477   4.7026922 ]\n",
+            " [-4.29338859  1.47990297 -1.2822243  -5.84078124 -1.7075457 ]\n",
+            " [-0.06758964  4.63993109 -4.2090755  -3.44387402  0.51811832]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Sin normalizar:\")\n",
+        "c= np.random.random((5,5)) #Creates random 5x5 matrix\n",
+        "print(c)\n",
+        "\n",
+        "def norm(matrix):\n",
+        "  return(matrix-matrix.mean())/matrix.var()\n",
+        "\n",
+        "print(\"Normalizada:\")\n",
+        "print(norm(c))"
       ]
     },
     {
@@ -968,14 +999,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "id": "3f639d33",
       "metadata": {
-        "id": "3f639d33"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3f639d33",
+        "outputId": "0c724c76-8929-49aa-e9ad-7b88a717d838"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random array R:\n",
+            "[3 0 1 0 4 3]\n",
+            "Random array S:\n",
+            "[6 3 0 3 2 6]\n",
+            "Axis = default:\n",
+            "[[3 0 1 0 4 3]\n",
+            " [6 3 0 3 2 6]]\n",
+            "Axis = 0:\n",
+            "[[3 0 1 0 4 3]\n",
+            " [6 3 0 3 2 6]]\n",
+            "Axis = -1:\n",
+            "[[3 6]\n",
+            " [0 3]\n",
+            " [1 0]\n",
+            " [0 3]\n",
+            " [4 2]\n",
+            " [3 6]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Random array R:\")\n",
+        "r = np.random.randint(9, size=6) #Esto crea un array con números de 0 a 9 y tamaño 6\n",
+        "print(r)\n",
+        "\n",
+        "print(\"Random array S:\")\n",
+        "s = np.random.randint(9, size=6)\n",
+        "print(s)\n",
+        "\n",
+        "print(\"Axis = default:\") #Igual a 0\n",
+        "print(np.stack((r,s)))\n",
+        "\n",
+        "print(\"Axis = 0:\")\n",
+        "print(np.stack((r,s), axis = 0))\n",
+        "\n",
+        "print(\"Axis = -1:\")\n",
+        "print(np.stack((r,s), axis = -1))"
       ]
     },
     {
@@ -990,14 +1064,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 103,
       "id": "9fe729cb",
       "metadata": {
-        "id": "9fe729cb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9fe729cb",
+        "outputId": "09c883ab-567b-4db6-e902-2d4de8d87785"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random array R:\n",
+            "[7 7 5 1 8 0]\n",
+            "Random array S:\n",
+            "[1 0 0 3 6 1]\n",
+            "hstack:\n",
+            "[7 7 5 1 8 0 1 0 0 3 6 1]\n",
+            "vstack:\n",
+            "[[7 7 5 1 8 0]\n",
+            " [1 0 0 3 6 1]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Random array R:\")\n",
+        "r = np.random.randint(9, size=6) #Esto crea un array con números de 0 a 9 y tamaño 6.\n",
+        "print(r)\n",
+        "\n",
+        "print(\"Random array S:\")\n",
+        "s = np.random.randint(9, size=6)\n",
+        "print(s)\n",
+        "\n",
+        "print(\"hstack:\")         \n",
+        "#Stack arrays in sequence horizontally (column wise).\n",
+        "#This is equivalent to concatenation along the second axis, except for 1-D arrays where it concatenates along the first axis.\n",
+        "print(np.hstack((r, s)))\n",
+        "\n",
+        "print(\"vstack:\") \n",
+        "#Stack arrays in sequence vertically (row wise).\n",
+        "#This is equivalent to concatenation along the first axis after 1-D arrays of shape (N,) have been reshaped to (1,N).\n",
+        "print(np.vstack((r, s)))"
       ]
     },
     {
