--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1157,14 +1157,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 126,
       "id": "b62e9d1c",
       "metadata": {
-        "id": "b62e9d1c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b62e9d1c",
+        "outputId": "b7b2894f-c171-4ba5-ff6e-9c184225e64a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Z random array:\n",
+            "[0.38884807 0.7646445  0.08781092 0.46247974 0.08581915 0.6442948\n",
+            " 0.09277352 0.52324652]\n",
+            "Q random array:\n",
+            "[0.28096941 0.99462147 0.68953307 0.75488859 0.43762634 0.6441904\n",
+            " 0.09534139 0.66800713]\n",
+            "Addition:\n",
+            "7.615095037556219\n",
+            "[0.66981748 1.75926597 0.777344   1.21736833 0.52344549 1.2884852\n",
+            " 0.18811492 1.19125365]\n",
+            "[3.04991722 4.56517781]\n",
+            "Subtraction:\n",
+            "[ 1.07878656e-01 -2.29976969e-01 -6.01722149e-01 -2.92408852e-01\n",
+            " -3.51807183e-01  1.04393593e-04 -2.56787179e-03 -1.44760614e-01]\n",
+            "Multiplication:\n",
+            "[0.10925441 0.76053184 0.06054854 0.34912068 0.03755672 0.41504852\n",
+            " 0.00884516 0.3495324 ]\n",
+            "Division:\n",
+            "[1.3839516  0.7687794  0.12734839 0.61264635 0.19610144 1.00016205\n",
+            " 0.97306656 0.78329481]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Z random array:\")\n",
+        "z = np.random.random(8) #Generates array with 8 random values\n",
+        "print(z) \n",
+        "\n",
+        "print(\"Q random array:\")\n",
+        "q = np.random.random(8)\n",
+        "print(q)\n",
+        "\n",
+        "print(\"Addition:\")\n",
+        "print(np.sum((z, q))) #axis=None will sum all of the elements of the input array\n",
+        "print(np.sum((z, q), axis = 0)) #Suma \"verticalmente uno a uno y el output es un array de 8 elementos\"\n",
+        "print(np.sum((z, q), axis = 1)) \n",
+        "\n",
+        "print(\"Subtraction:\")\n",
+        "print(np.subtract(z, q))\n",
+        "\n",
+        "print(\"Multiplication:\")\n",
+        "print(np.multiply(z,q))\n",
+        "\n",
+        "print(\"Division:\")\n",
+        "print(np.divide(z,q))"
       ]
     },
     {
@@ -1179,14 +1230,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 142,
       "id": "6ada209f",
       "metadata": {
-        "id": "6ada209f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 548
+        },
+        "id": "6ada209f",
+        "outputId": "2a8e46f0-535f-41df-8040-8f15806891ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.59685954 0.10835341 0.63336513 0.10067316 0.1609314  0.70053569\n",
+            "  0.17597434]\n",
+            " [0.5593366  0.67175623 0.46187339 0.27529369 0.59106351 0.31790093\n",
+            "  0.79436654]\n",
+            " [0.58778743 0.43665615 0.15448931 0.34302478 0.91931809 0.74884956\n",
+            "  0.26235342]\n",
+            " [0.47511613 0.45131489 0.8925683  0.21196268 0.06471191 0.56523554\n",
+            "  0.52433963]\n",
+            " [0.12728112 0.66142878 0.82989985 0.64598488 0.70331655 0.35845081\n",
+            "  0.4131552 ]]\n",
+            "[[8.30764080e-01 2.55669653e-01 1.76575275e-01 8.37764927e-01\n",
+            "  6.64622244e-01]\n",
+            " [3.92698085e-01 1.02674805e-01 9.20644021e-04 3.60723492e-01\n",
+            "  9.49343594e-01]\n",
+            " [2.12280995e-01 4.20918398e-01 7.27701746e-01 4.48293056e-01\n",
+            "  2.37142118e-01]\n",
+            " [4.82623998e-01 3.44935541e-01 5.43836961e-01 3.02642669e-01\n",
+            "  1.93958392e-01]\n",
+            " [4.60619941e-01 4.23440719e-01 7.32934630e-02 9.44188469e-01\n",
+            "  2.38690561e-01]]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-142-644b450bbd2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Creates random 8x9 matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,3) (6,3) "
+          ]
+        }
+      ],
       "source": [
-        ""
+        "k= np.random.random((5,7)) #Creates random 5x7 matrix\n",
+        "print(k)\n",
+        "j= np.random.random((5,5)) #Creates random 8x9 matrix\n",
+        "print(j)\n",
+        "\n",
+        "#print(np.multiply(k,j)) #No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\n",
+        "#(No es por esto aparentemente)"
       ]
     },
     {
