--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1230,41 +1230,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 162,
       "id": "6ada209f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 548
+          "height": 478
         },
         "id": "6ada209f",
-        "outputId": "2a8e46f0-535f-41df-8040-8f15806891ba"
+        "outputId": "6b4b1376-d512-4f2e-f2b5-76f5fbf73647"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.59685954 0.10835341 0.63336513 0.10067316 0.1609314  0.70053569\n",
-            "  0.17597434]\n",
-            " [0.5593366  0.67175623 0.46187339 0.27529369 0.59106351 0.31790093\n",
-            "  0.79436654]\n",
-            " [0.58778743 0.43665615 0.15448931 0.34302478 0.91931809 0.74884956\n",
-            "  0.26235342]\n",
-            " [0.47511613 0.45131489 0.8925683  0.21196268 0.06471191 0.56523554\n",
-            "  0.52433963]\n",
-            " [0.12728112 0.66142878 0.82989985 0.64598488 0.70331655 0.35845081\n",
-            "  0.4131552 ]]\n",
-            "[[8.30764080e-01 2.55669653e-01 1.76575275e-01 8.37764927e-01\n",
-            "  6.64622244e-01]\n",
-            " [3.92698085e-01 1.02674805e-01 9.20644021e-04 3.60723492e-01\n",
-            "  9.49343594e-01]\n",
-            " [2.12280995e-01 4.20918398e-01 7.27701746e-01 4.48293056e-01\n",
-            "  2.37142118e-01]\n",
-            " [4.82623998e-01 3.44935541e-01 5.43836961e-01 3.02642669e-01\n",
-            "  1.93958392e-01]\n",
-            " [4.60619941e-01 4.23440719e-01 7.32934630e-02 9.44188469e-01\n",
-            "  2.38690561e-01]]\n"
+            "[[0.8699427  0.65087443 0.58922114 0.62435058 0.69088604 0.9691484\n",
+            "  0.18002801]\n",
+            " [0.0856198  0.68540387 0.60649588 0.8023967  0.24380794 0.51288998\n",
+            "  0.0514533 ]\n",
+            " [0.94873762 0.70871581 0.56387234 0.89962484 0.8375227  0.66751889\n",
+            "  0.37304089]\n",
+            " [0.05751849 0.34021472 0.91558452 0.36506751 0.16101268 0.92762715\n",
+            "  0.02945615]\n",
+            " [0.07910327 0.26927203 0.56484912 0.00713254 0.45725708 0.61228681\n",
+            "  0.27301228]]\n",
+            "[[0.05103588 0.33006014 0.73406573 0.10865976 0.59943311]\n",
+            " [0.68645207 0.83830275 0.62237779 0.23494344 0.46484813]\n",
+            " [0.69554503 0.75323163 0.32538864 0.80684268 0.05397048]\n",
+            " [0.25851199 0.71284805 0.85326089 0.1843308  0.72209459]\n",
+            " [0.15760162 0.89664021 0.27433506 0.71653341 0.04296573]]\n"
           ]
         },
         {
@@ -1274,8 +1269,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-142-644b450bbd2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Creates random 8x9 matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,3) (6,3) "
+            "\u001b[0;32m<ipython-input-162-95c7ace9956a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#(No es por esto aparentemente)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,7) (5,5) "
           ]
         }
       ],
@@ -1285,7 +1280,7 @@
         "j= np.random.random((5,5)) #Creates random 8x9 matrix\n",
         "print(j)\n",
         "\n",
-        "#print(np.multiply(k,j)) #No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\n",
+        "print(np.multiply(k,j)) #No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\n",
         "#(No es por esto aparentemente)"
       ]
     },
@@ -1315,14 +1310,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 151,
       "id": "820dc7a5",
       "metadata": {
-        "id": "820dc7a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "820dc7a5",
+        "outputId": "fd1943e9-d807-48c3-ccab-3cdb5d22c972"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "[[ 21  24  27]\n",
+            " [ 66  78  90]\n",
+            " [111 132 153]]\n",
+            "[[ 0  3  8]\n",
+            " [15 24 35]\n",
+            " [48 63 80]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "h = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8]])\n",
+        "m = np.asmatrix(h)\n",
+        "print(m)\n",
+        "\n",
+        "i = np.array([[2, 3, 4], [5, 6, 7], [8, 9, 10]])\n",
+        "n = np.asmatrix(i)\n",
+        "print(m)\n",
+        "\n",
+        "print(m*n) #Resultado matriz 3x3, multiplica columna por fila, o sea el primer valor resultante sale de hacer (0*2 + 5*1 + 2*8) y así sucesivamente\n",
+        "print(np.multiply(m,n)) #Resultado matriz 3x3, multiplica posición por posición o sea 0*2, 1*3, 2*4, 3*5, etc."
       ]
     },
     {
@@ -1337,14 +1364,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 163,
       "id": "a3e05c29",
       "metadata": {
-        "id": "a3e05c29"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3e05c29",
+        "outputId": "741183d6-1171-4b82-cf11-b139ad659cfb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matriz random 5x3:\n",
+            "[[0.56023013 0.47608196 0.23531093]\n",
+            " [0.30322499 0.63889537 0.02859174]\n",
+            " [0.24501275 0.27943607 0.64775075]\n",
+            " [0.13056399 0.12688489 0.78440283]\n",
+            " [0.01822151 0.00937891 0.55184434]]\n",
+            "Matriz random 3x2:\n",
+            "[[0.65817525 0.77026602]\n",
+            " [0.71978405 0.67705531]\n",
+            " [0.61003733 0.89362457]]\n",
+            "Multiplicadas:\n",
+            "[[0.85495426 0.96413968]\n",
+            " [0.67688391 0.69168169]\n",
+            " [0.75754709 0.95676466]\n",
+            " [0.65577871 0.88743873]\n",
+            " [0.35538938 0.51352711]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Matriz random 5x3:\")\n",
+        "ab= np.random.random((5,3))\n",
+        "print(ab)\n",
+        "print(\"Matriz random 3x2:\")\n",
+        "cd= np.random.random((3,2)) \n",
+        "print(cd)\n",
+        "\n",
+        "print(\"Multiplicadas:\")\n",
+        "print(np.matmul(ab,cd)) #Esto hace la multiplicación de matrices tradicional"
       ]
     },
     {
@@ -1365,12 +1427,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 164,
       "id": "cd81c3c6",
       "metadata": {
-        "id": "cd81c3c6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cd81c3c6",
+        "outputId": "966e03ab-e797-44f2-f9e7-f3b3d883378b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "int64: 96\n",
+            "int8: 89\n",
+            "float32: 92\n"
+          ]
+        }
+      ],
       "source": [
         "import sys\n",
         "\n",
@@ -1414,7 +1490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 164,
       "id": "890bde78",
       "metadata": {
         "id": "890bde78"
@@ -1448,12 +1524,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 159,
       "id": "6801c73d",
       "metadata": {
-        "id": "6801c73d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6801c73d",
+        "outputId": "5686ce65-9c79-4919-b376-4043ffbff989"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[4 1]\n",
+            " [2 2]]\n"
+          ]
+        }
+      ],
       "source": [
         ""
       ]
