--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1524,27 +1524,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 170,
       "id": "6801c73d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6801c73d",
-        "outputId": "5686ce65-9c79-4919-b376-4043ffbff989"
+        "outputId": "ba931a50-5cb1-41d6-e940-3826558f72ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[4 1]\n",
-            " [2 2]]\n"
+            "Matriz random 5x3:\n",
+            "[[0.38971107 0.37844955 0.68867662]\n",
+            " [0.55134929 0.39602154 0.04548827]\n",
+            " [0.00465921 0.74837516 0.36441212]\n",
+            " [0.37389851 0.05109153 0.86517337]\n",
+            " [0.16720376 0.43329208 0.67672395]]\n",
+            "Media por fila:\n",
+            "[0.48561241 0.33095303 0.37248216 0.43005447 0.42573993]\n"
           ]
         }
       ],
       "source": [
-        ""
+        "print(\"Matriz random 5x3:\")\n",
+        "ab= np.random.random((5,3))\n",
+        "print(ab)\n",
+        "\n",
+        "print(\"Media por fila:\")\n",
+        "print(np.mean(ab, axis=1)) #Con axis especificás cómo querés que calcule la media"
       ]
     },
     {
@@ -1561,14 +1572,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 185,
       "id": "8ba1badb",
       "metadata": {
-        "id": "8ba1badb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ba1badb",
+        "outputId": "8918ec44-97a5-46f2-b20c-a8ab9688b58d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2022-05-18\n",
+            "2022-05-17\n",
+            "2022-05-19\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(np.datetime64('today', 'D')) #Today\n",
+        "\n",
+        "print(np.datetime64('today', 'D') - np.timedelta64(1,'D')) #Yesterday\n",
+        "\n",
+        "print(np.datetime64('today', 'D') + np.timedelta64(1,'D')) #Tomorrow"
       ]
     },
     {
@@ -1584,14 +1613,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 190,
       "id": "eb8ebe45",
       "metadata": {
-        "id": "eb8ebe45"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eb8ebe45",
+        "outputId": "0cc6de91-c132-45d9-d1e8-572a0b04f110"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['2022-12-01' '2022-12-02' '2022-12-03' '2022-12-04' '2022-12-05'\n",
+            " '2022-12-06' '2022-12-07' '2022-12-08' '2022-12-09' '2022-12-10'\n",
+            " '2022-12-11' '2022-12-12' '2022-12-13' '2022-12-14' '2022-12-15'\n",
+            " '2022-12-16' '2022-12-17' '2022-12-18' '2022-12-19' '2022-12-20'\n",
+            " '2022-12-21' '2022-12-22' '2022-12-23' '2022-12-24' '2022-12-25'\n",
+            " '2022-12-26' '2022-12-27' '2022-12-28' '2022-12-29' '2022-12-30']\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(np.arange(np.datetime64('2022-12-01'), np.datetime64('2022-12-31')))"
       ]
     },
     {
