--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1674,14 +1674,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 209,
       "id": "663cc611",
       "metadata": {
-        "id": "663cc611"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "663cc611",
+        "outputId": "78e8e79b-bcb0-4761-b414-e4bc2eca644e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0.]]\n",
+            "[[0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "matriz = np.zeros((5,5)) #Matriz de 5x5 con valores 0\n",
+        "print(matriz)\n",
+        "matriz += np.arange(5) \n",
+        "print(matriz)\n"
       ]
     },
     {
@@ -1703,7 +1727,7 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "### Pending"
       ]
     },
     {
@@ -1718,14 +1742,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 214,
       "id": "c89b93e7",
       "metadata": {
-        "id": "c89b93e7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c89b93e7",
+        "outputId": "df5a1109-fb90-4863-9f3c-b6699be491a1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.09090909 0.18181818 0.27272727 0.36363636 0.45454545 0.54545455\n",
+            " 0.63636364 0.72727273 0.81818182 0.90909091]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "vector = np.linspace(0, 1, 11, endpoint=False)[1:] #Con el 11 agrego un valor más porque son el [1:] le borro el primero\n",
+        "print(vector)"
       ]
     },
     {
