--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1778,14 +1778,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 222,
       "id": "4f7cb3ad",
       "metadata": {
-        "id": "4f7cb3ad"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4f7cb3ad",
+        "outputId": "10c2a276-3f14-47d7-9b1e-4d3f93ee0342"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.73403043 0.13155964 0.44450867 0.27708179 0.40622442 0.52041647\n",
+            " 0.67895513 0.56972024 0.31748167 0.78920325]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.13155964, 0.27708179, 0.31748167, 0.40622442, 0.44450867,\n",
+              "       0.52041647, 0.56972024, 0.67895513, 0.73403043, 0.78920325])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 222
+        }
+      ],
       "source": [
-        ""
+        "vec = (np.random.random(10))\n",
+        "print(vec)\n",
+        "\n",
+        "np.sort(vec)"
       ]
     },
     {
