--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1827,14 +1827,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 231,
       "id": "3326a686",
       "metadata": {
-        "id": "3326a686"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3326a686",
+        "outputId": "aefa32df-b3d2-43a5-dc12-6093ba9a07f2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]]\n",
+            "[[1 2]\n",
+            " [3 5]]\n",
+            "False\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 231
+        }
+      ],
       "source": [
-        ""
+        "a = np.array([[1, 2], [3, 4]])\n",
+        "b = np.array([[1, 2], [3, 5]])\n",
+        "c =  np.array([[1, 2], [3, 4]])\n",
+        "print(a)\n",
+        "print(b)\n",
+        "\n",
+        "np.array_equal(a,b) #False\n",
+        "np.array_equal(a,c) #True"
       ]
     },
     {
@@ -1857,7 +1890,12 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "#z= np.random.random((10,2))\n",
+        "#x,y = z[:,0], z[:,1]\n",
+        "#r = np.sqrt(x**2+y**2)\n",
+        "#t = np.arctan2(y,x)\n",
+        "#print(r)\n",
+        "#print(t)"
       ]
     },
     {
@@ -1872,14 +1910,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 243,
       "id": "f79e79a7",
       "metadata": {
-        "id": "f79e79a7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f79e79a7",
+        "outputId": "1c61df57-2a13-4081-90e1-f8c170202331"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.93477421 0.11169594 0.26707223 0.80525008 0.02762798 0.49084347\n",
+            " 0.41562901 0.32537733 0.40826105 0.4942333 ]\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "arr = np.random.random(10)\n",
+        "print(arr)\n"
       ]
     },
     {
