--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -1910,28 +1910,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 243,
+      "execution_count": 252,
       "id": "f79e79a7",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f79e79a7",
-        "outputId": "1c61df57-2a13-4081-90e1-f8c170202331"
+        "outputId": "4d9f8210-a891-494b-c783-42a0566a5d62"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.93477421 0.11169594 0.26707223 0.80525008 0.02762798 0.49084347\n",
-            " 0.41562901 0.32537733 0.40826105 0.4942333 ]\n"
+            "[0.4417279  0.26033688 0.05234901 0.04981985 0.91588997 0.3397557\n",
+            " 0.17223676 0.70004747 0.25712144 0.41297221]\n",
+            "[0.4417279  0.26033688 0.05234901 0.04981985 0.         0.3397557\n",
+            " 0.17223676 0.70004747 0.25712144 0.41297221]\n"
           ]
         }
       ],
       "source": [
         "arr = np.random.random(10)\n",
-        "print(arr)\n"
+        "print(arr)\n",
+        "arr[arr.argmax()] = 0\n",
+        "print(arr)"
       ]
     },
     {
@@ -1953,7 +1957,8 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "#np.set_printoptions con esto se setean las opciones para configurar cómo printea y que no printee arrays truncados\n",
+        "#np.set_printoptions(threshold=np.inf, linewidth=np.nan)"
       ]
     },
     {
@@ -1969,14 +1974,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 260,
       "id": "5db64b6d",
       "metadata": {
-        "id": "5db64b6d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5db64b6d",
+        "outputId": "fa334aea-b5e6-4383-f56f-df560b2af68b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "int32\n",
+            "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+            "float32\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "x = np.arange(10, dtype='int32')\n",
+        "print(x)\n",
+        "print(x.dtype)\n",
+        "y = x.view('float32')\n",
+        "y[:] = x\n",
+        "\n",
+        "print(y)\n",
+        "print(y.dtype)"
       ]
     },
     {
