--- a/02-numpy/02.1-Intro-to-Numpy.ipynb
+++ b/02-numpy/02.1-Intro-to-Numpy.ipynb
@@ -2025,7 +2025,13 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "#Este ejercicio ya está hecho más arriba\n",
+        "print(\"Matriz random 5x3:\")\n",
+        "ab= np.random.random((5,3))\n",
+        "print(ab)\n",
+        "\n",
+        "print(\"Media por fila:\")\n",
+        "print(np.mean(ab, axis=1)) #Con axis especificás cómo querés que calcule la media"
       ]
     },
     {
