--- a/02_1_Intro_to_Numpy.ipynb
+++ b/02_1_Intro_to_Numpy.ipynb
@@ -1525,14 +1525,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "6801c73d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6801c73d",
-        "outputId": "ba931a50-5cb1-41d6-e940-3826558f72ad"
+        "outputId": "e4dc81f0-27f9-4186-d88e-90a08085bc61"
       },
       "outputs": [
         {
@@ -1540,23 +1540,36 @@
           "name": "stdout",
           "text": [
             "Matriz random 5x3:\n",
-            "[[0.38971107 0.37844955 0.68867662]\n",
-            " [0.55134929 0.39602154 0.04548827]\n",
-            " [0.00465921 0.74837516 0.36441212]\n",
-            " [0.37389851 0.05109153 0.86517337]\n",
-            " [0.16720376 0.43329208 0.67672395]]\n",
+            "[[1 0 1]\n",
+            " [1 1 3]\n",
+            " [2 4 0]\n",
+            " [1 3 3]\n",
+            " [1 1 3]]\n",
             "Media por fila:\n",
-            "[0.48561241 0.33095303 0.37248216 0.43005447 0.42573993]\n"
+            "[[0.66666667]\n",
+            " [1.66666667]\n",
+            " [2.        ]\n",
+            " [2.33333333]\n",
+            " [1.66666667]]\n",
+            "Matriz menos la media:\n",
+            "[[ 0.33333333 -0.66666667  0.33333333]\n",
+            " [-0.66666667 -0.66666667  1.33333333]\n",
+            " [ 0.          2.         -2.        ]\n",
+            " [-1.33333333  0.66666667  0.66666667]\n",
+            " [-0.66666667 -0.66666667  1.33333333]]\n"
           ]
         }
       ],
       "source": [
         "print(\"Matriz random 5x3:\")\n",
-        "ab= np.random.random((5,3))\n",
+        "ab= np.random.randint(5, size = (5,3))\n",
         "print(ab)\n",
         "\n",
         "print(\"Media por fila:\")\n",
-        "print(np.mean(ab, axis=1)) #Con axis especificás cómo querés que calcule la media"
+        "meanab = np.mean(ab, axis=1, keepdims = True) #Con axis especificás cómo querés que calcule la media\n",
+        "print(meanab)\n",
+        "print(\"Matriz menos la media:\")\n",
+        "print(ab - meanab)"
       ]
     },
     {
@@ -2127,7 +2140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "7fdda78d",
       "metadata": {
         "id": "7fdda78d",
@@ -2169,7 +2182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "fe253212",
       "metadata": {
         "id": "fe253212",
@@ -2222,7 +2235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "a99a50e2",
       "metadata": {
         "id": "a99a50e2",
@@ -2266,7 +2279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "ef2c9ddd",
       "metadata": {
         "id": "ef2c9ddd",
@@ -2308,7 +2321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "9ab241b7",
       "metadata": {
         "id": "9ab241b7",
@@ -2408,7 +2421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "9e8fcba9",
       "metadata": {
         "id": "9e8fcba9",
@@ -2448,7 +2461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "f73127b7",
       "metadata": {
         "id": "f73127b7",
@@ -2488,7 +2501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "id": "8e84d3c2",
       "metadata": {
         "id": "8e84d3c2",
@@ -2529,7 +2542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "id": "3978a7a2",
       "metadata": {
         "id": "3978a7a2",
@@ -2565,7 +2578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "id": "16371718",
       "metadata": {
         "id": "16371718",
@@ -2606,7 +2619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "id": "301ba8a8",
       "metadata": {
         "id": "301ba8a8",
@@ -2643,7 +2656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "id": "f030595f",
       "metadata": {
         "id": "f030595f",
@@ -2681,7 +2694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "68c333b0",
       "metadata": {
         "id": "68c333b0",
