--- a/02_1_Intro_to_Numpy.ipynb
+++ b/02_1_Intro_to_Numpy.ipynb
@@ -1586,23 +1586,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "8ba1badb",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ba1badb",
-        "outputId": "8918ec44-97a5-46f2-b20c-a8ab9688b58d"
+        "outputId": "1f7940a3-b6ff-46cf-9b43-9bc86597a10e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2022-05-18\n",
-            "2022-05-17\n",
-            "2022-05-19\n"
+            "2022-05-20\n",
+            "2022-05-19\n",
+            "2022-05-21\n"
           ]
         }
       ],
@@ -1627,14 +1627,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "eb8ebe45",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eb8ebe45",
-        "outputId": "0cc6de91-c132-45d9-d1e8-572a0b04f110"
+        "outputId": "2e25da2d-7fee-468a-e6cd-d6eca22d2984"
       },
       "outputs": [
         {
@@ -1646,12 +1646,21 @@
             " '2022-12-11' '2022-12-12' '2022-12-13' '2022-12-14' '2022-12-15'\n",
             " '2022-12-16' '2022-12-17' '2022-12-18' '2022-12-19' '2022-12-20'\n",
             " '2022-12-21' '2022-12-22' '2022-12-23' '2022-12-24' '2022-12-25'\n",
-            " '2022-12-26' '2022-12-27' '2022-12-28' '2022-12-29' '2022-12-30']\n"
+            " '2022-12-26' '2022-12-27' '2022-12-28' '2022-12-29' '2022-12-30']\n",
+            "['2022-12-01' '2022-12-02' '2022-12-03' '2022-12-04' '2022-12-05'\n",
+            " '2022-12-06' '2022-12-07' '2022-12-08' '2022-12-09' '2022-12-10'\n",
+            " '2022-12-11' '2022-12-12' '2022-12-13' '2022-12-14' '2022-12-15'\n",
+            " '2022-12-16' '2022-12-17' '2022-12-18' '2022-12-19' '2022-12-20'\n",
+            " '2022-12-21' '2022-12-22' '2022-12-23' '2022-12-24' '2022-12-25'\n",
+            " '2022-12-26' '2022-12-27' '2022-12-28' '2022-12-29' '2022-12-30'\n",
+            " '2022-12-31']\n"
           ]
         }
       ],
       "source": [
-        "print(np.arange(np.datetime64('2022-12-01'), np.datetime64('2022-12-31')))"
+        "print(np.arange(np.datetime64('2022-12-01'), np.datetime64('2022-12-31')))\n",
+        "\n",
+        "#print(np.arange('2022-12', '2023-01', dtype = 'datetime64[D]')) Alternative way"
       ]
     },
     {
